--- a/example-config.yml
+++ b/example-config.yml
@@ -1,59 +1,100 @@
-build:
-  image: [your-image-name] (for example, `my-image`)  # MUST MATCH push.image
-  tag: [tag-you-want-to-give-your-image] (for example, `latest`)  # MUST MATCH push.tag AND submit.image-uri tag
-  template: [a-docker-template] (for example, `.` (the pwd))
-  context: [directory-that-has-context]
-
-push:
-  image: [local-docker-image-name] (something like 'my-image')  # MUST MATCH build.image
-  repo: [ecr-repo/image-name] (something like `my-repo`) (ECR calls images hosted there 'repos')  # MUST MATCH submit.image-uri repo
-  tag: [image-tag] (something like `latest`)  # MUST MATCH build.tag AND submit.image-uri tag
-  region: [aws-region] (something like `us-east-1`)  # MUST MATCH submit.region
-
-submit:
-  image-uri: [aws-account-id].dkr.ecr.[aws-region].amazonaws.com/[image-name]:[image-tag]  # [image-name]=push.repo, [image-tag]=push.tag
-  role-arn: arn:aws:iam::[aws-account-id]:role/[aws-role-with-access-to-sagemaker]
-  bucket: [globally-unique-bucket-name]
-  prefix: [some-prefix-that-helps-you-identify-the-bucket]
-  region: [aws-region]  # MUST MATCH push.region
-  entry-point: [filename-of-your-script's-entry-point]
-  source-dir: [directory-that-you-zip-up-to-push-to-sagemaker]
-  instance-type: [sagemaker-instance-name] (see here: https://aws.amazon.com/ec2/instance-types/)
-  instance-count: [instance-counts-that-you-have-access-to]
-  use-spot: false
-  max-wait-seconds: [optional-wait-seconds-for-spot] (for example, 3600)
-  params:
-    param-1: "value-1"
-    param-2: "value-2"
-
-
-# For example:
+provider: aws  # or gcp
 
 build:
-  image: my-image
-  tag: latest
-  template: gpu-cu121
-  context: .
+  image: [your-image-name]           # MUST MATCH push.image
+  tag: [tag]                         # MUST MATCH push.tag AND submit image tag
+  template: [docker-template]        # e.g., gpu-cu121 or cpu
+  context: [build-context-dir]
 
 push:
-  image: my-image
-  repo: my-repo
-  tag: latest
-  region: us-east-1
+  # AWS (ECR)
+  image: [local-image-name]          # MUST MATCH build.image
+  repo: [ecr-repo-name]              # MUST MATCH submit.image-uri repo
+  tag: [tag]                         # MUST MATCH build.tag AND submit image tag
+  region: [aws-region]               # MUST MATCH submit.region
+  # GCP (Artifact Registry) fields used when provider: gcp
+  project: [gcp-project-id]
+  artifact-repo: [artifact-registry-repo]
+  # repo defaults to image name if omitted
 
 submit:
-  image-uri: 123456789012.dkr.ecr.us-east-1.amazonaws.com/my-repo:latest
-  role-arn: arn:aws:iam::123456789012:role/SageMakerExecutionRole
-  bucket: my-unique-bucket-name
-  prefix: my-prefix
-  region: us-east-1
-  entry-point: train.py
-  source-dir: code-bundle
-  instance-type: ml.m5.xlarge
+  # AWS SageMaker
+  image-uri: [acct].dkr.ecr.[region].amazonaws.com/[repo]:[tag]
+  role-arn: arn:aws:iam::[acct]:role/[sagemaker-role]
+  bucket: [s3-bucket]
+  prefix: [s3-prefix]
+  region: [aws-region]
+  entry-point: [train-script.py]
+  source-dir: [code-bundle-dir]
+  instance-type: [ml.instance]
   instance-count: 1
   use-spot: false
   max-wait-seconds: 3600
   params:
     epochs: "5"
     batch-size: "64"
-    lr: "0.001"
+
+  # GCP Vertex (used when provider: gcp)
+  project: [gcp-project-id]
+  gcs-bucket: [gcs-bucket]
+  gcs-prefix: [gcs-prefix]
+  region: [gcp-region]               # e.g., us-central1
+  machine-type: [e.g., n1-standard-4]
+  accelerator-type: [optional, e.g., NVIDIA_TESLA_T4]
+  accelerator-count: 1
+  replica-count: 1
+
+# AWS example
+# provider: aws
+# build:
+#   image: my-image
+#   tag: latest
+#   template: gpu-cu121
+#   context: .
+# push:
+#   image: my-image
+#   repo: my-repo
+#   tag: latest
+#   region: us-east-1
+# submit:
+#   image-uri: 123456789012.dkr.ecr.us-east-1.amazonaws.com/my-repo:latest
+#   role-arn: arn:aws:iam::123456789012:role/SageMakerExecutionRole
+#   bucket: my-unique-bucket-name
+#   prefix: my-prefix
+#   region: us-east-1
+#   entry-point: train.py
+#   source-dir: code-bundle
+#   instance-type: ml.m5.xlarge
+#   instance-count: 1
+#   use-spot: false
+#   max-wait-seconds: 3600
+#   params:
+#     epochs: "5"
+#     batch-size: "64"
+#     lr: "0.001"
+
+# GCP example
+# provider: gcp
+# build:
+#   image: my-image
+#   tag: latest
+#   template: gpu-cu121
+#   context: .
+# push:
+#   image: my-image
+#   tag: latest
+#   project: my-gcp-project
+#   artifact-repo: my-artifact-repo
+#   region: us-central1
+# submit:
+#   image-uri: us-central1-docker.pkg.dev/my-gcp-project/my-artifact-repo/my-image:latest
+#   project: my-gcp-project
+#   gcs-bucket: my-bucket
+#   gcs-prefix: my-prefix
+#   region: us-central1
+#   entry-point: train.py
+#   source-dir: code-bundle
+#   machine-type: n1-standard-4
+#   replica-count: 1
+#   params:
+#     epochs: "5"
